--- a/pseudoeye.html
+++ b/pseudoeye.html
@@ -5,6 +5,42 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pseudo Eye - Project Description</title>
 
+<style>
+/* IoT/Arduino Theme CSS */
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+}
+
+h1, h2 {
+  color: #004080;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+a {
+  color: #0073e6;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+</style>
+
 </head>
 <body>
 
@@ -13,13 +49,12 @@
   <p>Welcome to the project description page of Pseudo Eye!</p>
   
   <h2>About Pseudo Eye</h2>
-  <p>Pseudo Eye is an innovative project aimed at simulating human-like vision capabilities using computer algorithms. It involves the development of algorithms that mimic the functioning of the human eye, enabling machines to interpret and understand visual data.</p>
+  <p>Pseudo Eye aims to navigate the blind people in closed surrounding.Pseudo Eye is an innovative project aimed at simulating human-like vision capabilities using <b>Arduino</b>. It involves the development of algorithms that mimic the functioning of the human eye, enabling machines to interpret and understand visual data.</p>
   
   <h2>Features</h2>
   <ul>
-    <li>Image Processing: Pseudo Eye processes visual data to extract meaningful information.</li>
-    <li>Object Recognition: It identifies objects within images or video streams.</li>
-    <li>Facial Recognition: The project includes facial recognition capabilities for various applications.</li>
+    <li>Navigation: Pseudo-Eye helps the blind person to move on by themselves without help of stick/other person's guidance</li>
+    <li>Image Processing: Pseudo Eye processes visual data to extract meaningful information from the surrounding by sensor.</li>
     <li>Real-time Analysis: Pseudo Eye performs analysis on visual data in real-time.</li>
   </ul>
   
@@ -34,7 +69,7 @@
   <p>In the future, Pseudo Eye aims to incorporate machine learning techniques for more advanced visual recognition and analysis capabilities.</p>
   
   <h2>Contact Us</h2>
-  <p>If you have any questions or inquiries regarding Pseudo Eye, feel free to contact us at <a href="mailto:contact@pseudoeye.com">contact@pseudoeye.com</a>.</p>
+  <p>If you have any questions or inquiries regarding Pseudo Eye, feel free to contact us at <a href="mailto:anirudh.krishnakumar@outlook.in">anirudh.krishnakumar@outlook.in</a>.</p>
 </div>
 
 </body>
