--- a/pseudoeye.html
+++ b/pseudoeye.html
@@ -8,18 +8,31 @@
 <style>
 /* IoT/Arduino Theme CSS */
 
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f2f2f2;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+body {
   font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-image: url('th.jpeg');
+  background-size: cover;
+  background-position: center;
+}
+
+.container {
+  width: 90%;
+  max-width: 1000px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
 }
 
 h1, h2 {
   color: #004080;
+}
+
+p {
+  color: #333;
 }
 
 ul {
@@ -49,11 +62,21 @@ a:hover {
   <p>Welcome to the project description page of Pseudo Eye!</p>
   
   <h2>About Pseudo Eye</h2>
-  <p>Pseudo Eye aims to navigate the blind people in closed surrounding.Pseudo Eye is an innovative project aimed at simulating human-like vision capabilities using <b>Arduino</b>. It involves the development of algorithms that mimic the functioning of the human eye, enabling machines to interpret and understand visual data.</p>
+  <p>Pseudo Eye aims to navigate the blind people in closed surrounding. Pseudo Eye is an innovative project aimed at simulating human-like vision capabilities using <b>Arduino</b>. It involves the development of algorithms that mimic the functioning of the human eye, enabling machines to interpret and understand visual data.</p>
+  <h2>Implementations</h2>
+<ul>
+  <li>Language used:Embedded C</li>
+ <li>Equipments used:Arduino Uno,8 ohm Speaker,Vibration motor</li>
+ <li>Contribution:Entire code is developed by myself</li>
+ <li>Source Code: Visit My Github<a href="https://github.com/Anirudh-krishnakumar">Anirudh.K</a></li></ul> 
   
+
+
+
+
   <h2>Features</h2>
   <ul>
-    <li>Navigation: Pseudo-Eye helps the blind person to move on by themselves without help of stick/other person's guidance</li>
+    <li>Navigation: Pseudo-Eye helps the blind person to move on by themselves without the help of a stick/other person's guidance</li>
     <li>Image Processing: Pseudo Eye processes visual data to extract meaningful information from the surrounding by sensor.</li>
     <li>Real-time Analysis: Pseudo Eye performs analysis on visual data in real-time.</li>
   </ul>
