--- a/pseudoeye.html
+++ b/pseudoeye.html
@@ -6,7 +6,7 @@
 <title>Pseudo Eye - Project Description</title>
 
 <style>
-/* IoT/Arduino Theme CSS */
+
 
 body {
   font-family: Arial, sans-serif;
@@ -68,13 +68,9 @@ a:hover {
   <li>Language used:Embedded C</li>
  <li>Equipments used:Arduino Uno,8 ohm Speaker,Vibration motor</li>
  <li>Contribution:Entire code is developed by myself</li>
- <li>Source Code: Visit My Github<a href="https://github.com/Anirudh-krishnakumar">Anirudh.K</a></li></ul> 
-  
-
-
-
-
-  <h2>Features</h2>
+ <li>Source Code: Visit My Github<a href="https://github.com/Anirudh-krishnakumar">Anirudh.K</a></li>
+</ul> 
+<h2>Features</h2>
   <ul>
     <li>Navigation: Pseudo-Eye helps the blind person to move on by themselves without the help of a stick/other person's guidance</li>
     <li>Image Processing: Pseudo Eye processes visual data to extract meaningful information from the surrounding by sensor.</li>
