--- a/pseudoeye.html
+++ b/pseudoeye.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Upload Image</h1>
-        <form action="/upload" method="post" enctype="multipart/form-data">
+        <form action="/upload_image" method="post" enctype="multipart/form-data">
             <input type="file" name="file" id="file" accept="image/*" required>
             <button type="submit">Upload</button>
         </form>
