--- a/pseudoeye.html
+++ b/pseudoeye.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Upload</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- External CSS file -->
 </head>
 <body>
     <div class="container">
         <h1>Upload Image</h1>
         <form action="/upload_image" method="post" enctype="multipart/form-data">
             <input type="file" name="file" id="file" accept="image/*" required>
-            <button type="submit">Upload</button>
+            <!-- File input field allowing only image files -->
+            <button type="submit">Upload</button> <!-- Submit button -->
         </form>
     </div>
 </body>
