--- a/pseudoeye.html
+++ b/pseudoeye.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Upload</title>
-    <link rel="stylesheet" href="styles.css"> <!-- External CSS file -->
+    <title>File Upload</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Upload Image</h1>
-        <form action="/upload_image" method="post" enctype="multipart/form-data">
-            <input type="file" name="file" id="file" accept="image/*" required>
-            <!-- File input field allowing only image files -->
-            <button type="submit">Upload</button> <!-- Submit button -->
-        </form>
-    </div>
+    <h2>Upload a File</h2>
+    <form action="http://localhost:8000" method="post" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <input type="submit" value="Upload">
+    </form>
 </body>
 </html>
